# Customer-churn-predictor

./: README.md
customer-churn-predictor/: app.py  pyproject.toml  train.py
customer-churn-predictor/mlruns/2/models/m-66565d5b7361433691f561d6fb4ca999/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
customer-churn-predictor/models/: churn_pipeline.pkl
