[project]
name = "customer-churn-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.10",
    "numpy>=2.3.5",
    "optuna>=4.8.0",
    "pandas<3",
    "protobuf<4",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.1",
    "shap>=0.51.0",
    "streamlit>=1.56.0",
    "xgboost==2.0.3",
]
